# SEEN_challenge

./: .gitignore  .gitmodules  CMakeLists.txt  OpenGL.sln  README.md
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters
OpenGL/res/shaders/: shader.frag  shader.vert
OpenGL/src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  glad.c  main.cpp
